Autenticazione quasi conclusa non funzionante

--- a/Software/FrontEnd/omi-finder/src/Home/Home.module.scss
+++ b/Software/FrontEnd/omi-finder/src/Home/Home.module.scss
@@ -2,21 +2,22 @@
 @use "../fonts";
 
 .Home {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	display: grid;
+	grid-template-rows: repeat(3, 1fr);
+	grid-template-columns: repeat(3, 1fr);
 
-	position: relative;
 	font-family: fonts.$Roboto;
+	width: 100%;
 	height: 100%;
 
 	& > .LogoContainer {
-		position: absolute;
-		left: 30px;
-		top: 20px;
+		margin: 20px 30px;
 	}
 
 	& > .SearchBarContainer {
+		grid-row-start: 2;
+		grid-column-start: 2;
+
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
