--- a/Software/FrontEnd/omi-finder/src/index.scss
+++ b/Software/FrontEnd/omi-finder/src/index.scss
@@ -24,6 +24,18 @@ body {
 	grid-template-rows: 60px 1fr;
 }
 
+#modal-root {
+	position: absolute;
+	left: 0;
+	top: 0;
+
+	overflow: hidden;
+	height: 100%;
+	width: 100%;
+
+	pointer-events: none;
+}
+
 // Removes an “X” from all text input fields in IE
 input[type="text"]::-ms-clear {
 	display: none;
