--- a/Software/FrontEnd/omi-finder/src/Home/Home.module.scss
+++ b/Software/FrontEnd/omi-finder/src/Home/Home.module.scss
@@ -14,6 +14,17 @@
 		margin: 20px 30px;
 	}
 
+	& > .Description {
+		display: block;
+		height: 28px;
+		color: colors.$white3;
+		font-family: fonts.$Roboto;
+		font-size: 20px;
+		font-weight: 100;
+		user-select: none;
+		
+	}
+
 	& > .SearchBarContainer {
 		grid-row-start: 2;
 		grid-column-start: 2;
@@ -23,9 +34,6 @@
 		justify-content: center;
 		align-items: center;
 
-		& > * {
-			margin: 10px;
-		}
 
 		& > .SearchBarDescription {
 			font-family: fonts.$Roboto;
@@ -33,5 +41,10 @@
 			color: colors.$white3;
 			user-select: none;
 		}
+	}
+
+	& >.Result{
+		grid-row-start: 3;
+		grid-column-start: 2;
 	}
 }
